--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -32,5 +35,6 @@
     "tailwindcss": "^3.1.8",
     "vite": "^3.1.8",
     "vite-plugin-vue2": "^2.0.2"
-  }
+  },
+  "packageManager": "npm"
 }
