--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@vitejs/plugin-vue2": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.10.0",
@@ -33,8 +34,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "tailwindcss": "^3.1.8",
-    "vite": "^3.1.8",
-    "vite-plugin-vue2": "^2.0.2"
+    "vite": "^3.1.8"
   },
   "packageManager": "npm"
 }
