--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@vitejs/plugin-vue2": "^2.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vueuse/core": "^9.3.0",
     "autoprefixer": "^10.4.12",
     "cypress": "^10.10.0",
     "eslint": "^8.25.0",
@@ -33,6 +34,7 @@
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
+    "unplugin-auto-import": "^0.11.2",
     "vite": "^3.1.8"
   },
   "packageManager": "npm"
